# codex-usage-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: cxusage.rb
src/: app.rs  cli.rs  lib.rs  main.rs  model.rs  parser.rs  source.rs  store.rs
tests/: cli_tests.rs  doctor_tests.rs  parser_tests.rs  source_tests.rs  store_tests.rs  watch_tests.rs
