[package]
name = "cxusage"
version = "0.1.1"
edition = "2024"
description = "A local TUI monitor for Codex usage"
license = "MIT"
repository = "https://github.com/HayattiQ/codex-usage-monitor"
readme = "README.md"
keywords = ["codex", "tui", "cli", "usage"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
glob = "0.3"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23"
